testsuite/tests/typing-modules-bugs/pr7414_2_bad.compilers.reference
File "pr7414_2_bad.ml", line 46, characters 22-35:
46 |   let module Ignore = Force(Choose) in
                           ^^^^^^^^^^^^^
Error: Modules do not match:
       functor () -> sig module Choice : T val r : '_weak1 list ref ref end
     is not included in functor () -> S
     Modules do not match:
       sig module Choice : T val r : '_weak1 list ref ref end
     is not included in
       S
     Values do not match:
       val r : '_weak1 list ref ref
     is not included in
       val r : Choice.t list ref ref
     File "pr7414_2_bad.ml", line 29, characters 2-31: Expected declaration
     File "pr7414_2_bad.ml", line 40, characters 8-9: Actual declaration
